<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:keep="@xml/pref_information">

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:key="@string/key_app_version"
            android:title="@string/title_version"
            android:summary="@string/app_version" />

        <!-- preference opens url in browser -->
        <Preference
            android:title="@string/title_developer"
            android:summary="@string/summary_developer">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_developer" />
        </Preference>

        <!-- preference opens url in browser -->
        <Preference
            android:title="@string/title_help"
            android:summary="@string/summary_help">
            <intent android:action="com.techart.writersblock.HelpActivity" />
        </Preference>

        <!-- Writers -->

        <Preference
            android:title="@string/title_writers"
            android:summary="@string/summary_writers">
            <intent android:action="com.techart.writersblock.WritersActivity" />
        </Preference>

        <!-- Poem -->
        <Preference
            android:title="@string/title_readers"
            android:summary="@string/summary_readers">
            <intent android:action="com.techart.writersblock.ReadersActivity" />
        </Preference>


    </PreferenceCategory>
</PreferenceScreen>