<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/item_library" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_app_24px"
            android:title="@string/log_out" />
    </group>

    <item android:checkable="true" android:title="@string/app_name">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_white_24px"
                android:title="@string/about" />

            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/ic_facebook_logo"
                android:title="@string/join_us" />

            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_24px"
                android:title="@string/title_help" />

            <item
                android:id="@+id/nav_shareapp"
                android:icon="@drawable/ic_share_24px"
                android:title="@string/share_app" />

            <item
                android:id="@+id/nav_writers"
                android:icon="@drawable/ic_writers_24px"
                android:title="@string/title_writers" />
        </menu>
    </item>
</menu>