<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_view"
    app:cardUseCompatPadding="true">


    <ImageButton
        android:id="@+id/btCover"
        android:layout_width="160dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"
        android:contentDescription="@string/story_cover" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="4dp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/tv_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/item_row"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>

        <ToggleButton
            android:id="@+id/tb_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/complete"
            android:textOff="@string/ongoing"
            android:textColor="@color/colorPrimary"/>

        <Button
            android:id="@+id/bt_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/item_row"
            android:paddingBottom="@dimen/item_row"
            android:text="@string/edit_chapters"
            android:textSize="14sp"
            android:textColor="@color/colorPrimary"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp">

            <TextView
                android:id="@+id/tv_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/view"/>

            <TextView
                android:id="@+id/tv_setCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="4dp"
                android:visibility="invisible"
                android:text="@string/set"/>

            <ImageButton
                android:id="@+id/im_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/delete"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/ic_delete_white_24px"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>