<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context="com.techart.writersblock.stories.StoryPrologueActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textAllCaps="true"
        android:text="@string/type_in_the_email" />

    <EditText
        android:id="@+id/et_dialog_editor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_email_you_registered_with"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_margin="7dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/cancel" />


        <TextView
            android:id="@+id/tv_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="7dp"
            android:layout_margin="7dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/send_mail" />

    </LinearLayout>
</LinearLayout>