<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context="com.techart.writersblock.poems.PoemEditorActivity">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorText"
            android:text="@string/episode" />

        <EditText
            android:id="@+id/editTitle"
            android:layout_width="40dip"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:hint="@string/number_placeholder"
            android:inputType="number" />
    </LinearLayout>

    <include layout="@layout/item_divider" />

    <EditText
        android:id="@+id/editText"
        android:paddingTop="10dp"
        style="@style/ButtonEditor"
        android:lineSpacingMultiplier="1.2"
        android:hint="@string/tap_to_write"
        android:background="@null"
        android:inputType="textMultiLine|textCapSentences" />
</LinearLayout>